[package]
name = "codde_pi_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic = "0.2.1"
pyo3 = "0.20.1"
quote = "1.0.35"
serde = {version= "1.0.194",  features = ["derive"] }
syn = "2.0.46"

[lib]
name = "coddepy"
